compiler/actonc/test/syntaxerrors/err6.golden
Building file test/syntaxerrors/err6.act using temporary scratch directory

ERROR: Error when compiling err6 module: Syntax error

test/syntaxerrors/err6.act:1:7:
  |
1 | def f(X):
  |       ^^
unexpected "X)"
expecting "**", '*', or name (not type variable)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

